ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral9/input.ts.stderr
error: Legacy decimal escape is not permitted in strict mode
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral9/input.ts:2:1
  |
2 | 009
  | ^^^

